--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -8,14 +8,16 @@ on:
 jobs:
   build:
     name: Run Build
-    uses: ./.github/workflows/build.yaml
-    secrets: inherit
+    uses: OxideMod/Actions/.github/workflows/game-build.yaml@main
     with:
+      game: "Rust"
       branch-postfix: "-${{ github.ref_name }}"
+    secrets:
+      REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
 
   deploy:
     name: Deploy to S3
-    uses: OxideMod/Actions/.github/workflows/r2-publish.yml@main
+    uses: OxideMod/Actions/.github/workflows/r2-publish.yaml@main
     needs: build
     with:
       generate-filehash: true
