Update GH actions to use new game build

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -4,20 +4,27 @@ on:
   push:
     branches-ignore:
       - master
+  workflow_dispatch:
+    inputs:
+      message:
+        description: 'Release note'
+        required: true
 
 jobs:
   build:
     name: Run Build
-    uses: OxideMod/Actions/.github/workflows/game-build.yaml@main
+    uses: OxideMod/Actions/.github/workflows/game-build.yml@main
     with:
       game: "Rust"
       branch-postfix: "-${{ github.ref_name }}"
     secrets:
+      DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
       REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
 
   deploy:
     name: Deploy to S3
-    uses: OxideMod/Actions/.github/workflows/r2-publish.yaml@main
+    uses: OxideMod/Actions/.github/workflows/r2-publish.yml@main
     needs: build
     with:
       generate-filehash: true
