Fix release action doc upload error

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Checkout Docs Repository
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.event.repository.owner.name }}/Oxide.Docs
+          repository: ${{ github.repository_owner }}/Oxide.Docs
           token: ${{ secrets.REPO_ACCESS_TOKEN }}
           ref: main
       - name: Download Artifacts
