Patch for August 7th Rust update (Protocol 2594.270.1)

--- a/src/Oxide.Rust.csproj
+++ b/src/Oxide.Rust.csproj
@@ -32,6 +32,7 @@
     <PackageReference Include="Oxide.Unity" Version="2.0.*" />
     <Reference Include="Assembly-CSharp" />
     <Reference Include="Assembly-CSharp-firstpass" />
+    <Reference Include="BoomlagoonJSON" />
     <Reference Include="Facepunch.Console" />
     <Reference Include="Facepunch.Network" />
     <Reference Include="Facepunch.Rcon" />
